examples/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-prometheus
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - 127.0.0.1.nip.io
  #   secretName: example-app-tls
  rules:
  - host: prometheus.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prometheus-operated
            port: 
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-grafana
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - 127.0.0.1.nip.io
  #   secretName: example-app-tls
  rules:
  - host: grafana.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: prom-grafana
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kube-prometheus-stack-ingress-alertmanager
  namespace: monitoring
spec:
  # tls:
  # - hosts:
  #   - 127.0.0.1.nip.io
  #   secretName: example-app-tls
  rules:
  - host: alertmanager.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: alertmanager-operated
            port: 
              number: 9093
